# CupConnect-flutter-django

./: Dockerfile  README.md  data.json  manage.py  pubspec.yaml  pyproject.toml  requirements.txt
api/: admin.py  models.py  serializer.py  tests.py  urls.py  views.py
api/images/fes/: s2.avif
api/images/marakech/: s4.avif
api/migrations/: 0001_initial.py  0002_alter_stadiums_id.py  0003_alter_stadiums_id.py  0004_rename_counrty_stadiums_country.py  0005_stadiums_map_alter_stadiums_picture.py  0006_alter_stadiums_map_alter_stadiums_picture.py  0007_user.py  0008_hotel_stadiums_hotels.py  0009_remove_stadiums_hotels_hotel_stad.py  0010_stadiums_latitude_stadiums_longtitude.py  0011_rename_description_hotel_properties_and_more.py
api/templates/: home.html
api/utils/: hotels.py
devjam/: asgi.py  settings.py  urls.py  wsgi.py
lib/: constante.dart  main.dart
lib/models/: studium.api.dart  studium.dart  user.api.dart  user.dart  user_cubit.dart
lib/views/: ForgetPass.dart  Login.dart  Register.dart  home.dart  stadium_detail.dart  theme.dart
lib/views/Widgets/: stadium_card.dart
